<resources>
    <string name="app_name">WorkandStudyApp</string>
    <string name="name_app">LikeU</string>
    <string name="get_start">Get Start</string>
    <string name="for_student">For Student</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_one">Update</string>
    <string name="startDate">Ngày học: </string>
    <string name="time_task">[06:00]</string>
    <string name="so0">0</string>
    <string name="gachCheo">/</string>
    <string name="ghi_ch">Ghi chú</string>
    <string name="ti_u">Tiêu đề</string>
    <string name="no_task">Chưa có công việc nào!</string>
    <string name="h_y">Hủy</string>
    <string name="th_i_gian">thời gian</string>
    <string name="_10_45">[10:45]</string>
    <string name="th_ng_b_o">Thông báo</string>
    <string name="ch_n_th_ng_b_o_tr_c">Chọn thông báo trước</string>
    <string name="todo">TODO</string>
    <string name="hello_nwelcome_to_likeu">HELLO!\nWelcome to LikeU</string>
    <string name="email">Email</string>
    <string name="email_user">hoangkhactien204@gmail.com</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="or_login_with">────────────── Or login with ──────────────</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="back_to_login">Back to login</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_user">Hoàng Khắc Tiến</string>
    <string name="tv_schedule">Thời khóa biểu</string>
    <string name="todo_list">Todo List</string>
    <string name="document">Tài liệu học tập</string>
    <string name="files">Tệp tin</string>
    <string name="tv_activity">Hoạt động</string>
    <string name="tv_quizz">Giải trí/Quizz</string>
    <string name="message">Tin nhắn</string>
    <string name="home">Trang chủ</string>
    <string name="notification">Thông báo</string>
    <string name="detail">Chi tiết</string>
    <string name="day_present">Ngày 6 tháng 11</string>
    <string name="profile">Profile</string>
    <string name="school">School</string>
    <string name="setting">Setting</string>
    <string name="support_and_feedback">Support and Feedback</string>
    <string name="share">Share</string>
    <string name="about_me">About me</string>
    <string name="sign_out">Sign Out</string>
    <string name="daily_task">Nhiệm vụ hàng ngày</string>
    <string name="wednesday_04">Wednesday,04</string>
    <string name="text_number_task">Bạn có 6 nhiệm vụ hôm nay</string>
    <string name="feb_2022">Feb 2022</string>
    <string name="add_task_today">[+]:Thêm nhiệm vụ vào ngày hiện tại</string>
    <string name="add">Thêm</string>
    <string name="new_task">Lời nhắc mới</string>
    <string name="add_task_no_complete">Thêm nhiệm vụ chưa hoàn thành</string>
    <string name="_11_11">11:11</string>
    <string name="title_task">Làm bài tập C++</string>
    <string name="save">Lưu</string>
    <string name="search_document">Nhập tên môn học</string>
    <string name="text_run">Chạy bộ</string>
    <string name="database">Database</string>
    <string name="lecture">Lecture</string>
    <string name="lecture_subject">Bài giảng</string>
    <string name="lesson">1. Đề cương và bài giảng</string>
    <string name="tv_message">Message</string>
    <string name="friend">Bạn bè của bạn</string>
    <string name="user">Mọi người</string>
    <string name="online">Đang online</string>
    <string name="hello_my_friend">hello my friend</string>
    <string name="storage">Storage</string>
    <string name="Available_storage">Dung lượng\nđã dùng</string>
    <string name="_120gb_512gb">120GB / 512GB</string>
    <string name="tv_all">Tất cả</string>
    <string name="tv_img">Ảnh/Video</string>
    <string name="tv_file">Files</string>
    <string name="tv_link">Links</string>
    <string name="recent_file">File mở gần đây</string>
    <string name="see_all">Xem tất cả ></string>
    <string name="file">File</string>
    <string name="_06_45">06:45</string>
    <string name="time_end">11:45</string>
    <string name="name_subject">750442 - Bong ban - PE2401</string>
    <string name="tv_location">Sáng thứ 2, Tiết 1-2, NTD</string>
    <string name="tv_week">Tuần 12</string>
    <string name="tv_agree">Chờ đồng ý</string>
    <string name="tv_detail">Chi tiết</string>
    <string name="tv_delete">Xóa</string>
    <string name="add_old_task">[ + ]</string>
    <string name="title_habit">Just do it</string>
    <string name="title_list_habit">Danh sách thói quen gợi ý</string>
    <string name="good_thing_take_time">Good \nthing \ntake\n time</string>
    <string name="completed">Đã hoàn thành</string>
    <string name="out_date">Quá hạn</string>
    <string name="out_line">Đề cương</string>
    <string name="document_midterm">2. Tài liệu giữa kỳ</string>
    <string name="btn_document_midterm">Tài liệu giữa kỳ</string>
    <string name="document_last">3. Tài liệu cuối kỳ</string>
    <string name="btn_document_last">Tài liệu cuối kỳ</string>
    <string name="document_reference">4. Tài liệu tham khảo</string>
    <string name="btn_document_reference">Tài liệu tham khảo</string>
    <string name="file_subject">https://drive.google.com</string>
    <string name="habit">Thói quen</string>
    <string name="history">Lịch sử</string>
    <string name="task">Nhiệm vụ</string>
    <string name="_1">1</string>
    <string name="time_hint">06:00</string>
</resources>