<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr3">

    <TextView
        android:id="@+id/tv_name_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/database"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_subject">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/lesson"
                android:textSize="25sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                app:cardBackgroundColor="#6ADAEB"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/lecture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/lecture_subject"
                    android:textSize="25dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                app:cardBackgroundColor="#6ADAEB"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/out_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/out_line"
                    android:textSize="25dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/part2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/document_midterm"
                android:textSize="25dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                app:cardBackgroundColor="#6ADAEB"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/document_midterm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_document_midterm"
                    android:textSize="25dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/part3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/document_last"
                android:textSize="25dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                app:cardBackgroundColor="#6ADAEB"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/document_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_document_last"
                    android:textSize="25dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/part4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/document_reference"
                android:textSize="25dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="95dp"
                app:cardBackgroundColor="#6ADAEB"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/document_reference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_document_reference"
                    android:textSize="25dp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>