<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:elevation="4dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:elevation="6dp"
        android:text="@string/wednesday_04"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="@+id/card_view" />

    <TextView
        android:id="@+id/tv_number_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:text="@string/text_number_task"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/card_view"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/prevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@null"
        android:elevation="6dp"
        android:text="@string/back"
        android:textColor="#117A6F"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_task" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@null"
        android:elevation="6dp"
        android:text="@string/forward"
        android:textColor="#117A6F"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/month_year"
        app:layout_constraintEnd_toEndOf="@id/card_view"
        app:layout_constraintTop_toTopOf="@+id/month_year" />

    <TextView
        android:id="@+id/month_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:gravity="center"
        android:text="@string/feb_2022"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/prevButton"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintStart_toEndOf="@+id/prevButton"
        app:layout_constraintTop_toTopOf="@+id/prevButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_schedule_week"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@id/prevButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_list_task"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_add_task_to_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <TextView
        android:id="@+id/tv_add_task_to_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:elevation="6dp"
        android:text="@string/add_task_today"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>