<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/roundedImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bgr_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lin_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_bgr"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:text="@string/sign_up"
            android:textColor="#79ED7A"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eMail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/passWord"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/phone"
            android:inputType="number|phone"
            android:paddingStart="20dp"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/effectpress"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/back_to_login"
        android:textColor="#07280A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/backtologin"
        app:layout_constraintStart_toEndOf="@+id/backtologin"
        app:layout_constraintTop_toTopOf="@+id/backtologin" />

    <ImageView
        android:id="@+id/backtologin"
        android:layout_width="40dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/icon_back"
        app:layout_constraintEnd_toEndOf="@+id/lin_layout"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/lin_layout"
        app:layout_constraintTop_toTopOf="@+id/lin_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>