<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/bgr_item_task"
    android:elevation="6dp">

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="-8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/title_task"
        android:textColor="@color/color_task"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/check_box"
        app:layout_constraintTop_toTopOf="@+id/check_box" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/time_task"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_mark_task"
        app:layout_constraintEnd_toStartOf="@+id/img_mark_task"
        app:layout_constraintTop_toTopOf="@+id/img_mark_task" />

    <ImageView
        android:id="@+id/img_mark_task"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="10dp"
        android:paddingHorizontal="4dp"
        android:src="@drawable/icon_mark_task"
        android:tint="@color/mark_task_true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_name_task" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_detail"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginBottom="-8dp"
        android:backgroundTint="#79E7FA"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/check_box"
        app:layout_constraintStart_toStartOf="@+id/tv_name_task"
        app:layout_constraintWidth_percent="0.19">

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_detail"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_delete"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="-8dp"
        android:backgroundTint="#79E7FA"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_detail"
        app:layout_constraintStart_toEndOf="@+id/cv_detail"
        app:layout_constraintTop_toTopOf="@+id/cv_detail"
        app:layout_constraintWidth_percent="0.19">

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_delete"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_add_old_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_old_task"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/cv_delete"
        app:layout_constraintEnd_toEndOf="@+id/img_mark_task"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/cv_delete"
        app:layout_constraintTop_toTopOf="@+id/cv_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>