<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/avt"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="5dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="50dp" />

    <TextView
        android:id="@+id/tv_wait_agree"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_agree"
        android:gravity="center"
        android:paddingHorizontal="5dp"
        android:text="@string/tv_agree"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/avt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avt" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/name_user"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/img_state_user"
        app:layout_constraintStart_toEndOf="@+id/avt"
        app:layout_constraintTop_toTopOf="@+id/img_state_user" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/email_user"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_state_user"
        app:layout_constraintEnd_toStartOf="@+id/img_state_user"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name" />

    <ImageView
        android:id="@+id/img_state_user"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginEnd="10dp"
        android:padding="6dp"
        android:src="@drawable/icon_add_user"
        app:layout_constraintBottom_toBottomOf="@+id/avt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avt" />
</androidx.constraintlayout.widget.ConstraintLayout>